# MindMovieAi

./: .gitignore  DEPLOYMENT_SECRETS.md  README.md  package.json  render.yaml  run.py  setup.py
backend/: .env.example  .gitignore  Dockerfile  README.md  api.py  auth.py  database.py  dimension_keywords.py  fix_seed.py  generate_artifacts.py  hf_utils.py  mailer.py  models.py  requirements.txt  seed_arc.py  start.sh
backend/data/: users_data.csv
backend/ml/: context_recommender.py  deep_learning.py  dl_recommender.py  fake_engagement.py  hf_sync.py  mood_arc.py  popularity_prediction.py  poster_classifier.py  predict_popularity.py  sentiment.py  sentiment_tf.py  sentiment_torch.py  train_sentiment.py  user_preference.py  youtube_ml.py
frontend/: .gitignore  lint.json  next.config.ts  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/explore/: page.tsx
frontend/src/app/favorites/: page.tsx
frontend/src/app/information/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/mood/: page.tsx
frontend/src/components/: ArcSparkline.tsx  Footer.tsx  MovieCard.tsx  Navbar.tsx  PosterImage.tsx  ProtectedRoute.tsx  SaveButton.tsx  ServerWarmup.tsx  ShapeGrid.tsx  VibeRadar.tsx
frontend/src/context/: AuthContext.tsx  DeviceContext.tsx  MoodContext.tsx  ThemeContext.tsx  VibeContext.tsx
frontend/src/hooks/: useIsMobile.ts
frontend/src/lib/: api.ts
local/: fix_seed.py  generate_artifacts.py  pyproject.toml  run.py  seed_arc.py  seed_vibes.py  train_sentiment.py
(+12 files in other folders)
